[gd_scene load_steps=4 format=3 uid="uid://b6d8mrawyd0li"]

[ext_resource type="Script" path="res://scenes/entities/spawner/spawner_note.gd" id="1_s5j6p"]
[ext_resource type="Texture2D" uid="uid://cafpni066xnfo" path="res://assets/Characters/asteroid.png" id="2_q4tb4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ww3kn"]

[node name="spawner" type="Node2D"]
script = ExtResource("1_s5j6p")

[node name="area" type="Area2D" parent="."]

[node name="star" type="Sprite2D" parent="area"]
position = Vector2(-1.52588e-05, -1.52588e-05)
scale = Vector2(0.335052, 0.335052)
texture = ExtResource("2_q4tb4")

[node name="hitbox" type="CollisionShape2D" parent="area"]
position = Vector2(-1.2219e-06, -2.08616e-07)
rotation = 0.785398
shape = SubResource("CircleShape2D_ww3kn")

[node name="supernova" type="Timer" parent="."]

[node name="despawn" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="timeout" from="supernova" to="." method="_on_supernova_timeout"]
[connection signal="timeout" from="despawn" to="." method="_on_despawn_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
